[project]
name = "inventreelabelprint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "keyring>=25.7.0",
    "pillow>=12.0.0",
    "qrcode[pil]>=8.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]
